# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacommons-import-workflow"
version = "0.1.0"
requires-python = ">=3.11"
description = "Integration test runner and workflow utilities for Data Commons Spanner ingestion"
dependencies = [
    "google-cloud-spanner>=3.0.0",
    "google-cloud-workflows>=1.0.0",
    "absl-py>=1.0.0",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true
