# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacommons-aggregation-helper"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Aggregation helper for Data Commons Spanner ingestion"
dependencies = [
    "gcsfs",
    "google-cloud-bigquery",
    "google-cloud-spanner",
    "google-cloud-storage",
    "jsonschema>=4.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
]

[tool.hatch.version]
path = "__init__.py"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
