# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacommons-ingestion-helper"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Ingestion helper for Data Commons Spanner ingestion"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.0.0",
    "google-cloud-spanner",
    "google-api-python-client",
    "google-cloud-storage",
    "google-auth",
    "absl-py",
    "google-cloud-bigquery",
    "redis",
    "jinja2",
    "requests",
    "pandas~=3.0.3",
    "pyyaml",
    "gcsfs",
]

[tool.hatch.version]
path = "__init__.py"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"clients/schema.sql" = "clients/schema.sql"
"spanner_embedding_settings_dev.yaml" = "spanner_embedding_settings_dev.yaml"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
